Change shift to offset

--- a/calibrate/html/root.html
+++ b/calibrate/html/root.html
@@ -24,8 +24,8 @@
 		<span id = "xmax_val">9999</span>
 		<span id = "label">center</span>
 		<span id = "xcenter_val">0000</span>
-		<span id = "label">shift</span>
-		<span id = "xshift_val">0000</span>
+		<span id = "label">offset</span>
+		<span id = "xoffset_val">0000</span>
 	</div>
 
 	<div id="yaxis" class="no_float">
@@ -35,8 +35,8 @@
 		<span id = "ymax_val">9999</span>
 		<span id = "label">center</span>
 		<span id = "ycenter_val">0000</span>
-		<span id = "label">shift</span>
-		<span id = "yshift_val">0000</span>
+		<span id = "label">offset</span>
+		<span id = "yoffset_val">0000</span>
 	</div>
 
 	<div id="zaxis" class="no_float">
@@ -46,8 +46,8 @@
 		<span id = "zmax_val">9999</span>
 		<span id = "label">center</span>
 		<span id = "zcenter_val">0000</span>
-		<span id = "label">shift</span>
-		<span id = "zshift_val">0000</span>
+		<span id = "label">offset</span>
+		<span id = "zoffset_val">0000</span>
 	</div>
 
 	<script type="text/javascript" src="main.js"></script>
